--- a/styles/style.css
+++ b/styles/style.css
@@ -1,35 +1,166 @@
 /**/
-*{
+  *{
     margin: 0;
-    padding: 0;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 0%;
+    font-family:/*'Franklin Gothic Medium',*/  Arial, sans-serif;
+  }
 
+  @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+body{
+  background: #f2f2f2;
+  font-family: 'Open Sans', sans-serif;
 }
 
 
-.site-header {
-    background-color: #f4f4f4;
+  .site-header {
+    background-color: #551f1f;
     display: grid;
     grid-template-columns: 15% 70% 15%;
     align-items: center;
+    padding-left: 10%;
+    grid-auto-flow: row;
   }
 
-.nav-header{
+  .img-header{
+    height: 100px;
+    padding-top: 0%;
+    background-color: #551f1f;
+  }
+
+  .img-footer{
+    height: 90px;
+  }
+
+  .nav-header{
     display: flex;
     justify-content: space-between;
-    padding-right: 20%;
+    padding-right: 30%;
     padding-left: 20%;
     font-weight: 1;
-    font-size: 30px;
+    font-size: 25px;
+    color: rgb(185, 37, 37);
+  }
+
+  .searchbar{
+    border-radius: 5px 5px 5px 5px;
+  }
+
+  .search{
+    display: flex;
+    padding-right: 1rem;
+    }
+
+  .buttom{
+    color: rgb(0, 0, 0);
+    display: flex;
+    border: 1px solid #000000;
+    background: #fff200;
+    
+    color: #fff;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    font-size: 100%;
+  }
+
+  .nav-footer{
+    image-resolution: 100%;
+    display: flex;
+    font-size: 14px;
+    padding-right: 20%;
+    padding-left: 20%;
+    justify-content: space-between;
+  }
+
+  .banner {
+    height: 10rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-image: url(../img/banner.jpg);
+    background-size: cover;
+    background-position: center center;
 }
 
-a {
-    text-decoration: none;
-    color: black;
+#title {
+  font-size: 4rem;
+  color: #000000;
+  padding: 0 2.5rem;
+  position: relative;
+  text-align: center;
+  z-index: 2;
 }
+
+.blur-rectangle {
+  height: 100%;
+  width: 100%;
+  background: rgb(255, 247, 237);
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(0.125rem); 
+  z-index: 1;
+}
+
+  a {
+    text-decoration:color(from color srgb r g b);
+    color: rgb(255, 255, 255);
+  }
 
 
   section{
     padding: 1rem;
-    background-color: aliceblue;
   }
+
+  .section-1{
+    display: flex;
+    background-color: rgb(255, 255, 255);
+    justify-content: space-between;
+  }
+  .section-2{
+    display: flex;
+    background-color: rgb(255, 247, 237);
+    justify-content: space-between;
+  
+    border: 1px solid #cf2c2c;
+  }
+
+  .section-2 ul{
+    /**/display: flex;
+    justify-content: space-between;
+    text-align: center;
+    border: 1px solid #d9ff00;
+
+    
+  }
+
+  .golden{
+  
+    display: flexbox;
+    padding: 3rem;
+    border:1px solid #000000;
+  }
+
+  .p-1{
+    padding: 1rem;
+    margin: auto;
+  }
+
+  .sections-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+  .image-container{
+    display: flex;
+    align-content: end;
+    justify-content: end;
+  }
+
+
