--- a/styles/style.css
+++ b/styles/style.css
@@ -164,3 +164,48 @@ body{
   }
 
 
+@media(max-width: 768px){
+  .site-header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 0%;
+    padding-right: 0%;
+  }
+
+  
+
+  .section-2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 0%;
+    padding-left: 0%;
+  }
+
+  .sections-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 0%;
+    padding-left: 0%;
+  }
+
+  .image-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 0%;
+    padding-left: 0%;
+
+
+  }
+
+  #tresgolden{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 0%;
+    padding-left: 0%;
+  }
+}
